# douban-group

./: .gitignore  README.md  config.py  crawler.py  main.py  notify.py  parse.py  pyproject.toml
src/: aiparse.py  crawler.py  parse.py
test/: test_crawler.py  test_notify.py  test_parse.py
